# direct-sqlite-bindings

./: direct-sqlite-bindings.cabal
Database/SQLite3/: Bindings.hs  Bindings.hsc
Database/SQLite3/Bindings/: Types.hsc
