name:               direct-sqlite-bindings
version:            0.1
synopsis:           FFI bindings for direct-sqlite
description:
    This library provides direct access to the SQLite3 API, but nonetheless
    leverages Haskell's type system to make usage less error-prone.
homepage:           https://github.com/joeyadams/direct-sqlite-bindings
bug-reports:        https://github.com/joeyadams/direct-sqlite-bindings/issues
license:            BSD3
license-file:       LICENSE
author:             Joey Adams, Irene Knapp
maintainer:         joeyadams3.14159@gmail.com
copyright:          Copyright (c) 2012 Joseph Adams
category:           Database
build-type:         Simple
cabal-version:      >=1.8

extra-source-files:
    cbits/sqlite3.c
    cbits/sqlite3.h

source-repository head
    type: git
    location: git://github.com/joeyadams/direct-sqlite-bindings.git

library
    exposed-modules:
        Database.SQLite3.Bindings
        Database.SQLite3.Bindings.Types

    c-sources:
        cbits/sqlite3.c

    ghc-options: -Wall -fwarn-tabs

    build-depends: base < 5

    build-tools: hsc2hs
